i18n/es/docusaurus-plugin-content-docs/version-3.1.0/changelog.mdx
---
title: Registro de cambios
---

import SuggestionLink from '@site/src/components/SuggestionLink';

Descubre la lista detallada de cambios realizados en RaidProtect.

## 3.1.0 (12/03/2025) {#3-1-0}

- Se agregaron **Comandos Slash**. <SuggestionLink id="463" />
- [Internacionalizacion](./language.md) (se agrego ingles). <SuggestionLink id="109" />
- Nueva funcion [`/report`](./features/reports.md). <SuggestionLink id="164" />
- Nuevos comandos de configuracion:
  - [`/settings`](./setup.md#settings) como panel interactivo.
  - [`/setup`](./setup.md#install) como proceso de incorporacion.
- Configuracion avanzada:
  - Activar/desactivar cada funcion individualmente. <SuggestionLink id="356" />
  - Elegir el tiempo y numero de intentos antes de la expulsion por el [captcha](./features/captcha#config). <SuggestionLink id="363" />
  - Opcion para seleccionar el canal de verificacion para el [captcha](./features/captcha). <SuggestionLink id="385" />
  - Ignorar usuarios/roles/categorias en el [anti-spam](./features/anti-spam.md#ignore). <SuggestionLink id="362" />
  - Elegir el [prefijo para comandos hibridos](./guides/prefix.md). <SuggestionLink id="103" />
  - Opcion para elegir si el [comando `/lock`](./features/channel-lock.md) renombra el canal bloqueado con `🔒`.
- Mejoras de UX:
  - Prefijo mostrado al mencionar al bot + mencion como prefijo universal. <SuggestionLink id="193" />
  - Desactivar el [captcha](./features/captcha) ya no elimina el rol y canal asociados. <SuggestionLink id="43" />
  - Deteccion automatica de problemas de permisos relacionados con canales y roles. <SuggestionLink id="65" />
  - Verificacion automatica de la visibilidad del canal de verificacion en el proceso de incorporacion de Discord.
  - Mensajes estandarizados.
- Mejora del rendimiento y estabilidad del bot.

## 3.0.0 (01/14/2023) {#3-0-0}

- Reescritura completa orientada a preparar futuras actualizaciones y estabilizar el bot.
- Se corrigieron todos los errores conocidos hasta la fecha.
- El [comando `?raidmode`](./features/raid-mode.md) ahora usa la funcion "Desactivar invitaciones".
- Envio automatico de un mensaje privado al miembro afectado cuando se aplica una sancion. <SuggestionLink id="426" />

## 2.2.0 (04/13/2020) {#2-2-0}

- Mejora del rendimiento del bot.
- Cambios significativos en la arquitectura interna del proyecto.

## 2.1.3 (10/13/2019) {#2-1-3}

- Se elimino la lista negra y los comandos asociados.
- Posibilidad de banear a cualquier usuario por su ID, incluso si no esta en el servidor afectado. <SuggestionLink id="113" /> <SuggestionLink id="148" />
- Visualizacion del motivo del baneo en la respuesta del [comando `?ban`](./features/moderation.md#ban).
- El [comando `?raidmode`](./features/raid-mode.md) ahora requiere el permiso para expulsar miembros.
- Se cambio la duracion de la expulsion si no se completa el captcha (5 min). <SuggestionLink id="129" />
- Diversas mejoras internas.

## 2.1.2 (04/17/2019) {#2-1-2}

- Se agrego el [comando `?userinfo`](./features/utilities.md#userinfo). <SuggestionLink id="29" />
- ~~Se agregaron los comandos `?lockall` y `?unlockall`~~ (Funcion eliminada).
- Se agregaron los comandos [`?kick`](./features/moderation.md#kick) y [`?ban`](./features/moderation.md#ban).
- Se agrego [edad minima al captcha](./features/captcha.md#minage) (posibilidad de establecer una edad minima de cuenta para acceder al servidor).
- Opcion para configurar la eliminacion automatica de mensajes de invocacion de comandos. <SuggestionLink id="26" />
- El canal de registros se recrea automaticamente si se elimina.
- Reestructuracion de la conexion a la base de datos.
- Correcciones de errores y diversas mejoras.

## 2.1.1 (02/21/2019) {#2-1-1}

- Se elimino `?settings captcha` (reemplazado por `?captcha`).
- Se agrego la posibilidad de establecer un [canal de registros](./features/captcha.md#logs) para el captcha.
- Se agrego un [rol automatico](./features/captcha.md#autorole) compatible con el captcha.
- Se simplifico el [captcha](./features/captcha.md) (5/6 letras correctas requeridas).
- Otros cambios menores.

## 2.1.0 (02/16/2019) {#2-1-0}

- Se agrego captcha (`?settings captcha`). <SuggestionLink id="11" />
- Se agrego nivel de seguridad anti-spam (`?settings spamlevel`). <SuggestionLink id="25" />
- Se agregaron los comandos `?about` e `?invite`.
- Se agrego el [comando `?clear`](./features/utilities.md#clear).
- Diversos cambios y correcciones de errores.

## 2.0.1 (02/04/2019) {#2-0-1}

- Se reescribio la ayuda (`?help`).
- Se corrigieron errores en [`?lock`](./features/channel-lock.md#lock) y [`?unlock`](./features/channel-lock.md#unlock).

## 2.0.0 (01/26/2019) {#2-0-0}

- Se agrego [anti-spam](./features/anti-spam.md).
- Se agrego [modo raid automatico](./features/raid-mode.md#config).
- Se agrego el canal de registros.
- Se agrego la configuracion del bot.
- Se agrego [bloqueo de canales](./features/channel-lock.md).
- Numerosos cambios diversos.
